
SVN
-------------------------------

XML:   Resolved issue CASTOR-1597 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Introduce proper exception handling to source generator
       Details: http://jira.codehaus.org/browse/CASTOR-1597
       (Edward - 20061010)

XML:   Resolved issue CASTOR-1117 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with setting type of untyped attribute through binding file.
       Details: http://jira.codehaus.org/browse/CASTOR-1117
       (Werner - 20061009)

XML:   Resolved issue CASTOR-1137 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with special characters in enumerations.
       Details: http://jira.codehaus.org/browse/CASTOR-1137
       (Werner - 20061009)

XML:   Resolved issue CASTOR-1087 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with incorrect initialization code for byte arrays.
       Details: http://jira.codehaus.org/browse/CASTOR-1087
       (Werner - 20061008)

XML:   Resolved issue CASTOR-1181 using contribution from Anton Spaans [aspaans@smarttime.com]
       Fixed problem with code generation for attributes that are restricted.
       Details: http://jira.codehaus.org/browse/CASTOR-1181
       (Werner - 20061008)

XML:   Resolved issue CASTOR-599 using contribution from Edward Kuns [edward.kuns@aspect.com]
       UnmarshalHandler doesn't chain exception
       Details: http://jira.codehaus.org/browse/CASTOR-599
       (Edward - 20061007)

XML:   Resolved issue CASTOR-1613 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Finish @throws javadoc
       Details: http://jira.codehaus.org/browse/CASTOR-1613
       (Edward - 20061007)

XML:   Resolved issue CASTOR-716 using contribution from Edward Kuns [edward.kuns@aspect.com]
       SourceGenerator doesn't correctly generate the .equals() method for base64binary